--- a/index.html
+++ b/index.html
@@ -102,11 +102,21 @@
       </ul>
     </main>
 
-    <!--     <footer class="attribution">
+    <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener noreferrer"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </footer> -->
+      >. Coded by
+      <a
+        href="http://www.frontendmentor.io/profile/NahuelEF"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Nahuel Fedele </a
+      >.
+    </footer>
   </body>
 </html>
