--- a/index.html
+++ b/index.html
@@ -23,83 +23,93 @@
   </head>
   <body>
     <main class="main">
-      <h1 class="main__title">10,000+ of our users love our products.</h1>
-      <p class="main__paragraph">
-        We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.
-      </p>
-      <ul class="ranking">
-        <li class="rate">
-          <div class="rate__stars"></div>
-          <span class="rate__description">Rated 5 Stars in Reviews</span>
-        </li>
-        <li class="rate">
-          <div class="rate__stars"></div>
-          <span class="rate__description"> Rated 5 Stars in Report Guru</span>
-        </li>
-        <li class="rate">
-          <div class="rate__stars"></div>
-          <span class="rate__description">Rated 5 Stars in BestTech</span>
-        </li>
-      </ul>
-      <ul class="reviews">
-        <li class="review">
-          <div class="profile">
-            <img
-              class="profile__image"
-              src="./images/image-colton.jpg"
-              alt="Profile"
-            />
-            <div class="profile__info">
-              <span class="profile__name">Colton Smith</span>
-              <span class="profile__verified">Verified Buyer</span>
-            </div>
-          </div>
-          <p class="review__comment">
-            "We needed the same printed design as the one we had ordered a week
-            prior. Not only did they find the original order, but we also
-            received it in time. Excellent!"
+      <section class="section-one">
+        <article class="article">
+          <h1 class="article__title">
+            10,000+ of our users love our products.
+          </h1>
+          <p class="article__paragraph">
+            We only provide great products combined with excellent customer
+            service. See what our satisfied customers are saying about our
+            services.
           </p>
-        </li>
+        </article>
+        <ul class="ranking">
+          <li class="rate rate--left">
+            <div class="rate__stars"></div>
+            <span class="rate__description">Rated 5 Stars in Reviews</span>
+          </li>
+          <li class="rate rate--center">
+            <div class="rate__stars"></div>
+            <span class="rate__description"> Rated 5 Stars in Report Guru</span>
+          </li>
+          <li class="rate rate--right">
+            <div class="rate__stars"></div>
+            <span class="rate__description">Rated 5 Stars in BestTech</span>
+          </li>
+        </ul>
+      </section>
 
-        <li class="review">
-          <div class="profile">
-            <img
-              class="profile__image"
-              src="./images/image-irene.jpg"
-              alt="Profile"
-            />
-            <div class="profile__info">
-              <span class="profile__name">Irene Roberts</span>
-              <span class="profile__verified">Verified Buyer </span>
+      <section class="section-two">
+        <ul class="reviews">
+          <li class="review review--top">
+            <div class="profile">
+              <img
+                class="profile__image"
+                src="./images/image-colton.jpg"
+                alt="Profile"
+              />
+              <div class="profile__info">
+                <span class="profile__name">Colton Smith</span>
+                <span class="profile__verified">Verified Buyer</span>
+              </div>
             </div>
-          </div>
-          <p class="review__comment">
-            "Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery."
-          </p>
-        </li>
+            <p class="review__comment">
+              "We needed the same printed design as the one we had ordered a
+              week prior. Not only did they find the original order, but we also
+              received it in time. Excellent!"
+            </p>
+          </li>
 
-        <li class="review">
-          <div class="profile">
-            <img
-              class="profile__image"
-              src="./images/image-anne.jpg"
-              alt="Profile"
-            />
-            <div class="profile__info">
-              <span class="profile__name"> Anne Wallace</span>
-              <span class="profile__verified">Verified Buyer</span>
+          <li class="review review--center">
+            <div class="profile">
+              <img
+                class="profile__image"
+                src="./images/image-irene.jpg"
+                alt="Profile"
+              />
+              <div class="profile__info">
+                <span class="profile__name">Irene Roberts</span>
+                <span class="profile__verified">Verified Buyer </span>
+              </div>
             </div>
-          </div>
-          <p class="review__comment">
-            "Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone!"
-          </p>
-        </li>
-      </ul>
+            <p class="review__comment">
+              "Customer service is always excellent and very quick turn around.
+              Completely delighted with the simplicity of the purchase and the
+              speed of delivery."
+            </p>
+          </li>
+
+          <li class="review review--bottom">
+            <div class="profile">
+              <img
+                class="profile__image"
+                src="./images/image-anne.jpg"
+                alt="Profile"
+              />
+              <div class="profile__info">
+                <span class="profile__name"> Anne Wallace</span>
+                <span class="profile__verified">Verified Buyer</span>
+              </div>
+            </div>
+            <p class="review__comment">
+              "Put an order with this company and can only praise them for the
+              very high standard. Will definitely use them again and recommend
+              them to everyone!"
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="attribution">
