--- a/index.html
+++ b/index.html
@@ -51,7 +51,62 @@
       </section>
 
       <section class="section-two">
-        <ul class="reviews">
+        <div class="review review--top">
+          <div class="profile">
+            <img
+              src="./images/image-colton.jpg"
+              alt="Profile"
+              class="profile__image"
+            />
+            <div class="profile__info">
+              <span class="profile__name">Colton Smith</span>
+              <span class="profile__verified">Verified Buyer</span>
+            </div>
+          </div>
+          <p class="review__comment">
+            " We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent! "
+          </p>
+        </div>
+
+        <div class="review review--center">
+          <div class="profile">
+            <img
+              src="./images/image-irene.jpg"
+              alt="Profile"
+              class="profile__image"
+            />
+            <div class="profile__info">
+              <span class="profile__name">Irene Roberts</span>
+              <span class="profile__verified">Verified Buyer</span>
+            </div>
+          </div>
+          <p class="review__comment">
+            " Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery. "
+          </p>
+        </div>
+        <div class="review review--bottom">
+          <div class="profile">
+            <img
+              src="./images/image-anne.jpg"
+              alt="Profile"
+              class="profile__image"
+            />
+            <div class="profile__info">
+              <span class="profile__name">Anne Wallace</span>
+              <span class="profile__verified">Verified Buyer</span>
+            </div>
+          </div>
+          <p class="review__comment">
+            " Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone! "
+          </p>
+        </div>
+        <!--         <ul class="reviews">
           <li class="review review--top">
             <div class="profile">
               <img
@@ -108,7 +163,7 @@
               them to everyone!"
             </p>
           </li>
-        </ul>
+        </ul> -->
       </section>
     </main>
 
