--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Frontend Mentor | Social proof section</title>
+    <title>Nahuel Fedele | Social proof section</title>
   </head>
   <body>
     <main class="main">
